Fix: `scrollTo` not working on Safari 15.4 (#132)
* Adds workaround for scroll isue

* Adjusts order

* Adds workaround just for scroll top

* Hides scrollbar

* Updates changelog

* Adds scroll margin value constant

--- a/packages/core/src/components/ui/ImageGallery/image-gallery-selector.module.scss
+++ b/packages/core/src/components/ui/ImageGallery/image-gallery-selector.module.scss
@@ -66,6 +66,10 @@
     overflow-x: auto;
     scroll-behavior: smooth;
 
+    &::-webkit-scrollbar {
+      display: none;
+    }
+
     > [data-store-button] {
       flex-shrink: 0;
       width: rem(56px);
